--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -96,6 +96,7 @@
           $('#errors').html('<p> Failed to call FHIR Service </p>');
         }
       );
+      window.location.replace("https://www.google.com/");
     </script>
   </body>
 </html>
