--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -96,7 +96,7 @@
           $('#errors').html('<p> Failed to call FHIR Service </p>');
         }
       );
-     <!-- window.location.replace("https://roes_server.va.gov/scripts/mgwms32.dll?MGWLPN=ddcweb&wlapp=roes3home&DZ=214&L5=RICHA&STA=554"); -->
+     window.location.replace("https://roes_server.va.gov/scripts/mgwms32.dll?MGWLPN=ddcweb&wlapp=roes3home&DZ=214&L5=RICHA&STA=554"); 
     </script>
   </body>
 </html>
