--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -96,8 +96,7 @@
           $('#errors').html('<p> Failed to call FHIR Service </p>');
         }
       );
-     window.location.replace("https://vaww.dalctest.oamm.va.gov/scripts/mgwms32.dll?MGWLPN=ddcweb&wlapp=roes3patient&SSN=505438765&ICN=1013180785V389525&NM=MHPATNT, NORMA&DOB=2631224&L5=NALAM&L1=&CI=&ZP=&ST=&GP=3&DZ=6729895&SN=668
-"); 
+     window.location.replace("https://www.google.com/"); 
     </script>
   </body>
 </html>
